k8s/production/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: production 
spec:
  ports:
    - port: 5432
  selector:
    app: postgres
